@@ -2,45 +2,11 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'application'
 apply plugin: 'org.openjfx.javafxplugin'
-//mainClassName = 'eu.hansolo.tilesfxdemo.Main'
-//mainClassName = 'eu.hansolo.tilesfxdemo.MiscDemo'
- mainClassName = 'us.ilite.display.DriverStation'
-// mainClassName = 'us.ilite.display.Main'
-//mainClassName = 'us.ilite.display.testing.AutonConfigDisplay'
-//mainClassName = 'us.ilite.display.testing.TestingDisplay'
-
-def javaFxMains = [
-    'tilesfxdemoMain':
-        ['mainClass'   : 'eu.hansolo.tilesfxdemo.Main',
-         'description' :'Executes the tile demo main'],
-    'tilesfxdemoMiscDemo' : 
-        ['mainClass'   : 'eu.hansolo.tilesfxdemo.MiscDemo',
-         'description' :' Executes the tiles misc demo'
-        ],
-    'driverStation' : 
-        ['mainClass'   : 'us.ilite.display.DriverStation',
-         'description' : 'The main drivers station display'
-        ],
-    'iliteMain' : 
-        ['mainClass'   : 'us.ilite.display.Main',
-         'description' : 'The main display'
-        ],
-    'testinAutonConfig' :
-        ['mainClass'   : 'us.ilite.display.testing.AutonConfigDisplay',
-         'description' : 'The autonomous config display'
-        ],
-    'testDisplay' : 
-        ['mainClass'   : 'us.ilite.display.testing.TestingDisplay',
-         'display'     : 'The testing display'
-        ]
-]
-
+mainClassName = 'us.ilite.display.DriverStation'
 apply from: 'plot.gradle'
 
-def javaFxMods = [ 'javafx.base', 'javafx.controls', 'javafx.media', 'javafx.graphics', 'javafx.fxml' ]
-
 javafx {
-    modules = javaFxMods
+    modules = [ 'javafx.base', 'javafx.controls', 'javafx.media', 'javafx.graphics', 'javafx.fxml' ]
     version = "11.0.+"
 }
 
@@ -66,29 +32,39 @@ dependencies {
     runtime group: "edu.wpi.first.ntcore", name: "ntcore-jni", version: "2019.+", classifier: "all"
     compile group: "edu.wpi.first.ntcore", name: "ntcore-java", version: "2019.+"
     compile group: "edu.wpi.first.wpiutil", name: "wpiutil-java", version: "2019.+"
-    
-    project.
-    // task runApp(type: JavaExec) {
-    //     classpath = sourceSets.main.runtimeClasspath
-    //     main = 'us.ilite.display.Main'
 
-    //     List<String> moduleJvmArgs = new ArrayList<String>(Arrays.asList("--module-path",sourceSets.main.runtimeClasspath.getAsPath()));
-        
-    //     String addModules = String.join(",", javaFxMods);
+    def javaFxMains = [
+    'tilesfxdemoMain':
+        ['mainClass'   : 'eu.hansolo.tilesfxdemo.Main',
+         'description' :'Executes the tile demo main'],
+    'tilesfxdemoMiscDemo' : 
+        ['mainClass'   : 'eu.hansolo.tilesfxdemo.MiscDemo',
+         'description' :' Executes the tiles misc demo'
+        ],
+    'driverStation' : 
+        ['mainClass'   : 'us.ilite.display.DriverStation',
+         'description' : 'The main drivers station display'
+        ],
+    'iliteMain' : 
+        ['mainClass'   : 'us.ilite.display.Main',
+         'description' : 'The main display'
+        ],
+    'testinAutonConfig' :
+        ['mainClass'   : 'us.ilite.display.testing.AutonConfigDisplay',
+         'description' : 'The autonomous config display'
+        ],
+    'testDisplay' : 
+        ['mainClass'   : 'us.ilite.display.testing.TestingDisplay',
+         'display'     : 'The testing display'
+        ]
+]
 
-    //     List<String> jvmArgs = new ArrayList<String>();
-    //     jvmArgs.add("--add-modules");
-    //     jvmArgs.add(addModules);
-    //     jvmArgs.addAll(moduleJvmArgs);
-    //     setJvmArgs(jvmArgs);
-        
-    // }
-
+    //These tasks must be generated after the project has been 
+    //evaluated so that the run task, which is created by the application plugin, 
+    //has been fully created so that these tasks can inherit the classpath and modules.
     afterEvaluate {project->
 
         javaFxMains.each{key, value ->
-            def taskName = "run${key}"
-            println taskName
             project.task(["type":JavaExec, "description" : value.description,"group" : "application"], 'run'+key) {
                 classpath = sourceSets.main.runtimeClasspath
                 main = value.mainClass
